<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World of Warcraft Toon Search</string>
    <string name="action_settings">Settings</string>
    <string name="serverHint">Please Enter Your Server Name</string>
    <string name="toonHint">Please Enter Your Character Name</string>
    <string name="searchToon">Search For Character</string>
    <string name="toonLevel">Character Level:</string>
    <string name="realmName">Realm Name:</string>
    <string name="battlegroup">Battlegroup:</string>
    <string name="achievement">Achievement Points:</string>
    <string name="honorableKills">Honorable Kills:</string>

</resources>
